:lipstick: About : fix social networks btn display on iOS devices

--- a/frontend/src/assets/styles/pages/_About.scss
+++ b/frontend/src/assets/styles/pages/_About.scss
@@ -53,10 +53,11 @@
     flex-wrap: wrap;
 
     .About__btn {
+      width: min-content;
+      min-width: unset;
       margin-top: 0 !important;
       border-radius: 0.5rem !important;
       padding: 0.5rem !important;
-      min-width: unset;
       aspect-ratio: 1;
       height: 3rem;
 
